--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,6 +1,6 @@
 .main-body{
     font-family: 'Varela Round', sans-serif;
-    background-color: #5979c3;
+    background-color: white;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -10,13 +10,33 @@
 .app-body{
     background-color: white;
     width: 30%;
-    border-radius: 30px;
-    margin: 30px 0px;
-    padding: 30px;
+    position: relative;
+    box-shadow: 1px 2px 10px gray;
+}
+
+.footer{
+    position: fixed;
+    bottom: 0px;
+    width: 30%;
+    height: 100px;
+    padding: 20px;
+    animation: show 300ms ease-in-out;
+}
+
+@keyframes show{
+    0%{
+        opacity: 0;
+    }100%{
+        opacity: 1;
+    }
 }
 
 @media screen and (max-width: 1200px) {
     .app-body{
+        width: 60%;
+    }
+    
+    .footer{
         width: 60%;
     }
 }
@@ -34,5 +54,9 @@
         border-radius: 0px;
         width: 100%;
         height: 100%;
+    }
+    
+    .footer{
+        width: 100%;
     }
 }
