--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,6 +1,6 @@
 .main-body{
     font-family: 'Varela Round', sans-serif;
-    background-color: white;
+    background-color: wheat;
     height: 100vh;
     display: flex;
     justify-content: center;
@@ -11,7 +11,6 @@
     background-color: white;
     width: 30%;
     position: relative;
-    box-shadow: 1px 2px 10px gray;
 }
 
 .footer{
